--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "test.com.livetest"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         ndk {
@@ -28,6 +28,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.11.0'
+    compile 'com.squareup.okio:okio:1.14.0'
+    compile files('libs/aliyun-oss-sdk-android-2.9.2.jar')
+    compile files('libs/oss-android-sdk-2.9.2-javadoc.jar')
+    compile files('libs/oss-android-sdk-2.9.2-sources.jar')
     testCompile 'junit:junit:4.12'
     compile project(path: ':library')
     compile project(path: ':vitamio')
